--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "next": "15.1.3",
+    "primereact": "^10.9.1",
     "react": "^19.0.0",
+    "react-currency-input-field": "^3.9.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-hook-form": "^7.54.2",
+    "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
     "typescript": "^5",
