--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "next": "15.1.3",
+    "primeicons": "^7.0.0",
     "primereact": "^10.9.1",
     "react": "^19.0.0",
-    "react-currency-input-field": "^3.9.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
